# evolveagent-ai

./: .gitignore  DEMO.md  FINAL_CHECKLIST.md  FINAL_PROJECT_SUMMARY.md  README.md  VERSIONS.md  docker-compose.yml
.claude-flow/data/: pending-insights.jsonl
.github/workflows/: ci.yml  update-diagram.yml
backend/: .env.example  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  main.py
desktop/: .gitignore  README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  CASE_STUDY.md  CODEX_ASSIGNMENT_v100.md  CODEX_ASSIGNMENT_v150_frontend.md  CODEX_ASSIGNMENT_v220_cost_tracking.md  CODEX_ASSIGNMENT_v230_error_path_rollback.md  CODEX_ASSIGNMENT_v240_gpu_worker_expansion.md  CODEX_ASSIGNMENT_v260_model_serving_readiness.md  CODEX_ASSIGNMENT_v280_parallel_execution.md  CODEX_HANDOFF.md  DEMO_VIDEO_SCRIPT.md  INTERVIEW_EXPLANATION.md  PORTFOLIO_PACK.md  RESUME_BULLETS.md
frontend/: package-lock.json  package.json  vitest.config.ts
patches/: collapse-dashboard.patch  cyan-trial.patch  fix-heading-css.patch  font-size.patch  font-unify.patch  hero-all-in-one.patch  hero-complete.patch  hero-spacing.patch  hide-badge.patch  instructions-page.patch  remove-redundant-topbar.patch  sync-sidebar-guide.patch  sync.patch  visual-updates-batch1.patch
scripts/: archive_legacy_linear_issues.py  create_official_roadmap_linear.py  migrate_json_to_pg.py  reconcile_official_roadmap_linear.py  smoke_test.py
(+373 files in other folders)
