[package]
name = "evolveagent-desktop"
version = "0.1.0"
description = "Native macOS wrapper for EvolveAgent"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "evolveagent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
